# Project-OmniWatch-2.0

./: .env.example  .gitignore  AGENTS.md  README.md  _check_imports.py  config.py  conftest.py  docker-compose.yml
ai/: README.md  __init__.py  grounding_guard.py
auth/: README.md  middleware.py  rbac_manager.py  sso_provider.py
billing/: pricing_dashboard.py  pricing_engine.py
compliance/: README.md  audit_logger.py  iso27001_reporter.py  soc2_reporter.py
dashboard/: README.md
docs/: Build-Plan.md  Competitor-Analysis.md  DSL-Documentation-Code.txt  DataFlow.md  Enterprise-Comparison.md  Master-Comparison.md  New-System-Architecture.md  Open-Source-Comparison.md  Simple-New-System-DataFlow.md  api-reference.md
federation/: README.md  region_manager.py  topology_sync.py
ingestion/: README.md
ingestion/ghost_collector/controller/: Cargo.toml
ingestion/ghost_collector/controller/src/: event_parser.rs  main.rs  otel_exporter.rs
integrations/: README.md  __init__.py  base.py  github_integration.py  gitlab_integration.py  registry.py  servicenow.py  terraform_cloud.py
learning/: README.md  feedback_loop.py  knowledge_base.py  pattern_miner.py  recommendation_engine.py
mobile/: README.md  app.json  package.json
monitoring/: health_checker.py  metrics_exporter.py
ops/: backup.py  restore.py
performance/: async_processor.py  benchmark.py  benchmark_enhanced.py  load_test.py  load_test_full.py  memory_optimizer.py
remediation/: README.md
resilience/: chaos_test.py
security/: README.md  __init__.py  cspm_checker.py  perf_sec_correlator.py  (+2 more)
(+212 files in other folders)
