[package]
name = "omniwatch-controller"
version = "0.1.0"
edition = "2021"
description = "eBPF controller for OmniWatch 2.0 GhostCollector"

[dependencies]
aya = { version = "0.12", features = ["async-tokio"] }
aya-obj = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
